[INFER] Evict as necessary when restoring parent registers before branching, bug 646001.